# ip-camera-ehome-server

./: .gitignore  CMakeLists.txt  README.md
cmake/: util.cmake
include/: cms_sms.h  config.h  ehome_server.h  ip_camera.h  ip_camera_manager.h  util.h
include/ices/: config.h  ehome_server.h  ip_camera.h
python/: ehome_server.i  setup.py  test_python_bindings.py
scripts/: build.sh  build_python_bindings.sh  install.sh  install_python_bindings.sh  install_thirdparty_libs.sh
src/: cms_sms.cc  ehome_server.cc  ip_camera.cc  ip_camera_manager.cc
src/ices/: ehome_server.cc  ip_camera.cc
tests/: test_demo.cc  test_demo_neo.cc  test_ehome_server.cc
